log
Thu 09 May 2024 01:05:47 AM UTC: 
 tests:  1|8
total_score: 0/70
e47873d
Thu 09 May 2024 03:01:55 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5a007b5
Thu 09 May 2024 03:02:46 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f467aaa
Thu 09 May 2024 03:05:25 AM UTC: 
 treemap.c | 31 ++++++++++++++++---------------
 1 file changed, 16 insertions(+), 15 deletions(-)
 tests:  11|6
total_score: 15/70
a1dee93
Thu 09 May 2024 03:11:02 AM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  13|5
total_score: 25/70
7915d4e
Thu 09 May 2024 03:11:49 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
981ebfa
Thu 09 May 2024 03:14:52 AM UTC: 
 treemap.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 tests:  18|3
total_score: 40/70
4eb0056
Thu 09 May 2024 03:27:31 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
1deda8e
Thu 09 May 2024 03:29:52 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  25|1
total_score: 60/70
437477c
